--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ ARENA MULTIMEDIA</title>
 	<h2 class="text-"> CHƯƠNG TRÌNH ĐÀO TẠO </h2>
     <h3 class="subtitle text-shadow"><a href="#">Học thiết kế, học đồ họa, học 3D tại Arena Multimedia</a></h3>
   <div class="row">
-    <div class="col-6"> <img src="IMAGES/pic 01.jpg" class="img-100" alt=""> </div>
+    <div class="col-6"> <img src="images/pic 01.jpg" class="img-100" alt=""> </div>
     <div class="col-6">
       <ol>
 		<li><span class="text-primary">SEM I: </span>Graphic Design
@@ -65,7 +65,7 @@ ARENA MULTIMEDIA</title>
     <h2 class="bg-dark text-gradient text-shadow">Các cơ sở Arena Multimedia trên toàn quốc</h2>
 <div class="row">
       <div class="w-33 " >
-        <div class="trang-shadow"> <img src="IMAGES/pic (1).png" class="img-100" alt="cơ sở 1">
+        <div class="trang-shadow"> <img src="images/pic (1).png" class="img-100" alt="cơ sở 1">
           <h3><a href="#" class="a-cam">Arena Tân Kỳ Tân Quý</a></h3>
           <p>Mong muốn mang đến một không gian phục vụ vụ cho nhiều bạn trẻ học tập ở phía Tây khu vực Tân Bình, Tân Phú, </p>
           <p><a href="#" class="a-cam">XEM THÊM</a></p>
@@ -73,7 +73,7 @@ ARENA MULTIMEDIA</title>
       </div>
       <!--hết  cột 1 cua 33-->
       <div class="w-33 " >
-        <div class="trang-shadow"> <img src="IMAGES/pic (5).jpg" class="img-100" alt="cở sở 2">
+        <div class="trang-shadow"> <img src="images/pic (5).jpg" class="img-100" alt="cở sở 2">
           <h3><a href="#">Arena Trần Phú</a></h3>
           <p>Cơ sở thứ 5 của Arena Multimedia được chính thức ra mắt vào tháng 12 năm 2019, đã tạo ra một không gian sáng tạo </p>
           <p><a href="#">XEM THÊM</a></p>
@@ -124,4 +124,3 @@ ARENA MULTIMEDIA</title>
 </footer></div>
 </body>
 </html>
-
