--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -30,16 +30,16 @@ ARENA MULTIMEDIA</title>
       <h3> Thương hiệu số 1 tại Châu Á về đào tạo Chuyên gia Mỹ thuật Đa phương tiện. </h3>
     </div>
     <div class="row text-center">
-      <div class="w-25 "> <img src="IMAGES/icon-1.webp" alt="" class="img-100">
+      <div class="w-25 "> <img src="images/icon-1.webp" alt="" class="img-100">
         <h4> 27 năm kinh nghiệm </h4>
       </div>
-      <div class="w-25"> <img src="IMAGES/icon-2.webp" alt="" class="img-100">
+      <div class="w-25"> <img src="images/icon-2.webp" alt="" class="img-100">
         <h4 align="center"> 250 trung tâm</h4>
       </div>
-      <div class="w-25"> <img src="IMAGES/icon-3.webp" alt="" class="img-100">
+      <div class="w-25"> <img src="images/icon-3.webp" alt="" class="img-100">
         <h4 align="center"> 450.000 sinh viên</h4>
       </div>
-      <div class="w-25"> <img src="IMAGES/icon-4.webp" alt="" class="img-100">
+      <div class="w-25"> <img src="images/icon-4.webp" alt="" class="img-100">
         <h4 align="center"> 20 quốc gia</h4>
       </div>
     </div>
