--- a/dang-ky-hoc.html
+++ b/dang-ky-hoc.html
@@ -65,7 +65,7 @@ ARENA MULTIMEDIA</title>
                     <select name="khoahoc" class="input-form" id="khoahoc">
                         <option value="">----Chọn khóa học-----</option>
                         <option value="1">Graphic Design & Interactive Media</option>
-                         <option value="1">Graphic Design & Interactive Media</option>
+                         <option value="2">Animation, VFX & Gaming</option>
 						
                     </select> <br>
                     <input type="submit" value="Đăng ký" class="btn-primary">
@@ -104,4 +104,5 @@ ARENA MULTIMEDIA</title>
 </div>
 </body>
 </html>
+
 
